--- a/src/App.css
+++ b/src/App.css
@@ -1,45 +1,90 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 .App {
-  text-align: center;
-  height: 100vh;
-  background-color: rgb(0, 0, 0);
   color: white;
   font-family: Poppins;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+p {
+  margin: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Link {
+  text-decoration: none;
+  color: white;
+  display: flex;
+  width: fit-content;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.section-title {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  width: fit-content;
+}
+
+.section-title:hover {
+  cursor: pointer;
+}
+
+.section-title:hover>.loadMore {
+  color: #DFC206;
+}
+
+.loadMore {
+  font-size: 32px;
+  font-weight: 700;
+}
+
+.title {
+  font-size: 25px;
+  font-weight: 700;
+}
+
+.bar {
+  width: 5px;
+  height: 25px;
+  background-color: #DFC206;
+  border-radius: 1px;
+  font-weight: 700;
+}
+
+.movieContainer {
+  display: flex;
+  gap: 15px;
+  overflow-x: auto;
+}
+
+/* Style for the scrollbar (for WebKit/Blink) */
+.movieContainer::-webkit-scrollbar {
+  height: 0px; /* Width of the vertical scrollbar */
+}
+
+.movieCard {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  background-color: rgb(25, 25, 25);
+  border-radius: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+.moviePoster {
+  width: 200px;
+  height: 280px;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
+.watchBtn {
+  font-size: 14px;
+  background-color: rgb(18,18,18);
+  cursor: pointer;
+  margin-bottom: 10px;
+  border: 1.5px solid rgb(18,18,18);
+  border-radius: 10px;
+  padding: 5px 10px;
+}
 
-  to {
-    transform: rotate(360deg);
-  }
+.watchBtn:active {
+  background-color: rgb(30,30,30);
+  border: 1.5px solid black;
 }
